@@ -295,6 +295,7 @@ protected Q_SLOTS:
     virtual void slotAddedDropedItems(QDropEvent* e) = 0;
     virtual void slotOpenWith(QAction* action=0) = 0;
     virtual void slotHtmlGallery() = 0;
+    virtual void slotCalendar() = 0;
 
 private Q_SLOTS:
 
