@@ -191,6 +191,7 @@ private Q_SLOTS:
     void slotEditMetadata();
     void slotEditGeolocation();
     void slotHtmlGallery();
+    void slotCalendar();
 
 private:
 
